<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:columnCount="2"
    android:rowCount="6"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/permitirAcesso"
        android:layout_width="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_row="1"
        android:layout_column="1"
        android:elevation="4dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        android:text="@string/permisao"
        android:textColor="@color/corTexto" />

    <Button
        android:id="@+id/ativarGpsButton"
        android:layout_width="400dp"
        android:layout_row="0"
        android:layout_columnSpan="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="25dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/ligarGPS"
        android:textColor="@color/corTexto" />

    <Button
        android:id="@+id/desligarGPS"
        android:layout_width="wrap_content"
        android:gravity="start"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        android:text="@string/desligarGPS2"
        android:textColor="@color/corTexto" />

    <Button
        android:id="@+id/inicioCaminho"
        android:gravity="start"
        android:layout_column="0"
        android:layout_row="2"
        app:layout_goneMarginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        android:text="@string/caminho"
        android:textColor="@color/corTexto"/>

    <Button
        android:id="@+id/fimCaminho"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:gravity="center"
        app:layout_goneMarginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        android:text="@string/fimCaminho"
        android:textColor="@color/corTexto"/>

    <TextView
        android:id="@+id/distanciaPercorrida"
        android:gravity="start"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:text="@string/distanciaPercorrida"
        android:textColor="@color/corTexto"
        android:textSize="@dimen/tamanhoTexto2" />


    <TextView
        android:id="@+id/labelPercorrida"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:gravity="center"
        android:padding="12dp"
        app:layout_goneMarginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tamanhoTexto2" />


    <TextView
        android:id="@+id/tempoTotal"
        android:layout_gravity="start"
        android:layout_row="4"
        android:layout_column="0"
        android:padding="12dp"
        app:layout_goneMarginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tempoTotal"
        android:textColor="@color/corTexto"
        android:textSize="@dimen/tamanhoTexto2" />

    <Chronometer
        android:id="@+id/cronometro"
        android:layout_gravity="center_horizontal"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/corTexto"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/EditText"
        android:layout_width="18dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/dica"
        android:inputType="textMultiLine|textLongMessage"
        android:padding="5dp"
        android:background="@color/colorPrimaryDark"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botaoPesquisa"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_column="1"
        android:layout_row="5"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_search_category_default" />

</GridLayout>